--- a/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/4.md
+++ b/Portfolio/Pages/Content/Stage3/Bewijsmateriaal/4.md
@@ -3,9 +3,9 @@
 
 Dit document beschrijft de belangrijkste voor- en nadelen van [Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor). Het dient als bewijsmateriaal voor [Leerdoel 4 - Advies](Content/Stage3/Leerdoelen/4).
 
-Op basis van de informatie in dit document zullen softwareontwikkelaars kunnen beslissen of Blazor voor hun interresant is.
+Op basis van de informatie in dit document zullen de softwareontwikkelaars van Ranshuijsen kunnen beslissen of het ombouwen van het CRM naar Blazor een goede keuze zal zijn.
 
-## Blazor
+## Blazor Varianten
 Blazor is een onderdeel van Microsoft ASP.NET Core. Blazor geeft ontwikkelaars de mogelijkheid om interactieve websites te bouwen met behulp van C# in plaats van JavaScript.
 
 Op het moment zijn er twee varianten van Blazor beschikbaar. De eerste variant is Blazor Server, waarbij alle C# code op de server wordt uitgevoerd. De browser download alleen een klein JavaScript package, en gebruikt deze om via een zogehete *SignalR* verbinding te maken met de server. Alle acties van de client (bijvoorbeeld button clicks) en alle UI updates van de server worden via deze verbinding verzonden. Deze variant vereist een server om alle code op uit te voeren, en werkt daardoor niet met statische webservers zoals [GitHub Pages](https://pages.github.com/).
@@ -19,21 +19,30 @@ Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET
 ## Voordelen
 De algemene voordelen van Blazor zijn als volgt;
 
- * De gehele Microsoft .NET library en de meeste libraries van derden kunnen gebruikt worden in het bouwen van een frontend. Ook is het mogelijk om alsnog JavaScript code en libraries aan te toepen vanuit uw C# code.
- * Het gehele framework is Open-Source. U kunt daarom precies zien hoe Blazor van binnen werkt, en is het ook mogelijk om uw eigen verbeteringen of _fork_ te maken.
+ * De gehele Microsoft .NET library en de meeste libraries van derden kunnen gebruikt worden in het bouwen van een frontend. Ook is het mogelijk om alsnog JavaScript code en libraries aan te toepen vanuit uw C# code.  
+   * Veel van de toolkits die het CRM op het moment in de backend gebruikt kunnen hierdoor ook gebruikt worden in de frontend. Dit betekent dat veel van de libraries die op het moment in de frontend worden gebruikt overbodig zullen zijn, omdat deze kunnen worden vervangen met C# code.
+ * Het gehele framework is Open-Source. Ontwikkelaars kunnen daarom precies zien hoe Blazor van binnen werkt, en kunnen ze ook hun eigen verbeteringen of _fork_  maken.
+   * Omdat ASP.NET ook al Open-Source is, zal het CRM hier niks van merken.
  * Net zoals React, is Blazor component-based. Dit betekent dat de gehele website is opgebouwd uit losse, herbruikbare componenten. U kunt bijvoorbeeld een component bouwen die het weer laat zien, en deze vervolgens op meerdere paginas gebruiken zonder dat u de code hiervan steeds moet kopieeren. Ook zijn er verschillende component libraries van derde partijen die u kunt gebruiken.
+   * De frontend van het CRM maakt op het moment gebruik van een aantal verschillende libraries voor invoervelden. Zo zijn er bijvoorbeeld meerdere datuminvoervelden die allemaal net wat anders werken. Dit consistentieprobleem kan in Blazor worden opgelost door hier 1 component voor te bouwen die overal wordt hergebruikt.
  * Applicaties die MVC gebruiken hebben vaak paginas verspreidt staan over meerdere bestanden, waardoor het soms onoverzichterlijk wordt. Blazor heeft dit probleem niet; de HTML van de pagina en de C# code die de pagina aanstuurt kunnen beide in hetzelfde bestand worden geplaatst. Het is natuurlijk nog steeds mogelijk om paginas op te splitsen in meerdere bestanden, mocht dit nodig zijn.
+	* Het CRM bestaad op het moment van schrijven uit enkele honderden CSHTML en Javascript bestanden. Met Blazor zal het mogelijk worden om een groot deel van deze bestanden samen te voegen, om zo de mappenstructuur overzichtelijker te maken.
 
 De voordelen van Blazor WASM zijn als volgt;
  * Met Blazor WASM wordt alle C# code eerst gecompileerd voordat het naar de browser wordt verstuurd. Deze gecompileerde code is over het algemeen sneller dan JavaScript, al zal dit verschil alleen merkbaar zijn voor enorm grote, hardware-intensieve applicaties.
+   * Omdat het CRM geen hardware-intensieve applicatie is, zal dit verschil nauwelijks of zelfs niet merkbaar zijn.
  * Het is mogelijk om code die gebruikt wordt in een C# backend te hergebruiken in een Blazor WASM frontend. Dit zorgt voor meer consistentie in bijvoorbeeld in- en outputvalidatie.
+   * Het CRM heeft op het moment weinig input validatie in de frontend. Deze validatiechecks kunnen dankzij Blazor alsnog makkelijk worden geimplementeerd.
  * In tegenstelling tot Blazor Server, zal een Blazor WASM applicatie blijven werken zelfs als de webserver offline gaat. Het is daarom ook mogelijk om een statische webserver te gebruiken. Ook is *serverless deployment* mogelijk, via bijvoorbeeld een CDN.
+   * De frontend van het CRM zal met Blazor WASM ten allen tijden moeten kunnen communiceren met de backend server. Als deze verbinding wegvalt, dan is de frontend vrijwel nutteloos. Dit aspect van Blazor WASM heeft daarom geen voordelen voor het CRM.
 
 De voordelen van Blazor Server zijn als volgt;
 * Omdat alle code op de server draait, is het niet nodig om ingevoerde gevens in de front- en backend apart te valideren. Neem bijvoorbeeld een veld voor emailadressen. Normaalgesproken zou de frontend controleren of de ingevoerde text een correct emailadres is, waarna de text wordt verstuurd naar de backend die vervolgens dezelfde controle uitvoert. Met Blazor Server is dit overbodig, omdat de frontend zelf geen enkele controles doet.
-* Het enige dat de browser van de server moet download is een klein JavaScript pakket dat de verbinding met de server opzet. Dit zorgt ervoor dat de applicatie zeer snel kan laden.
-* Aangezien alle code op de server draait, is de applicatie zeer licht voor de browser. Gebruikers kunnen daarom ook op oudere computers Blazor Server applicaties gebruiken, mits ze een moderne internetbrowser gebruiken.
- * De ontwikkelaars van uw systeem hebben maar 1 programmeertaal nodig om uw gehele systeem te bouwen; C#.
+  * Het CRM heeft op het moment weinig input validatie in de frontend. Met Blazor Server hebben wij deze validatie checks helemaal niet meer nodig, omdat we de bestaande controles van de server kunnen gebruiken.
+* Het enige dat de browser moet downloaden van de server is een klein JavaScript pakket dat de verbinding met de server opzet. Dit zorgt ervoor dat de applicatie zeer snel kan laden, zelfs op verouderde apparaten.
+  * Alle computers die door de medewerkers van Ranshuijsen worden gebruikt zijn zodanig krachtig, dat het verschil in laadtijd nauwelijks of zelfs niet te merken zal zijn.
+* Aangezien alle code op de server draait, is de applicatie zeer licht voor de browser. Gebruikers kunnen daarom ook op oudere computers Blazor Server applicaties gebruiken, mits ze een moderne internetbrowser gebruiken.  
+  * Alle computers die door de medewerkers van Ranshuijsen worden gebruikt zijn zodanig krachtig, dat het verschil in laadtijd nauwelijks of zelfs niet te merken zal zijn.
 
 ## Nadelen
 Elke technologie heeft natuurlijk ook nadelen. De algemene nadelen van Blazor zijn als volgt;
@@ -41,15 +50,23 @@ Elke technologie heeft natuurlijk ook nadelen. De algemene nadelen van Blazor zi
 
 De nadelen van Blazor WASM zijn als volgt;
 * De eerste keer dat een Blazor WASM applicatie uitgevoerd kan worden, moet de browser eerst een versie van de .NET Runtime downloaden. Deze versie is kleiner dan de normale versie, maar is nog steeds ongeveer 2.5 MB, wat waarschijnlijk enorm is vergeleken met de grootte van uw applicatie zelf.
+  * De internetverbinding van Ranshuijsen is zodanig snel dat wij hier nauwelijks iets van zullen merken.
 * Er is op het moment relatief weinig ondersteuning voor debugging tools zoals andere C# applicaties hebben. Dit kan betekenen dat het meer tijd zal kosten voor ontwikkelaars om bepaalde bugs te vinden. Het is bijvoorbeeld op het moment nog niet mogelijk om breakpoints te gebruiken in Blazor WASM.
+  * De migratie naar Blazor zal hierdoor waarschijnlijk net iets meer tijd kosten.
 * Microsoft Internet Explorer en een groot deel van de internetbrowsers die Thin Clients vaak gebruiken hebben geen ondersteuning voor WebAssembly, waardooe Blazor WASM hierop niet zal werken. Dit kan een groot nadeel zijn voor organisaties die deze software en/of systemen gebruiken.
+  * Ranshuijsen maakt geen gebruik van Thin Clients of Microsoft Internet Explorer, en zullen hier daarom geen problemen ervaren.
 * Libraries en packages die gebruik maken van native libraries zullen helaas niet werken. Zo zal de `System.Data.SQLite` package niet werken, omdat dit een wrapper is voor een C++ library.
+  * De frontend van het CRM zal geen native libraries nodig hebben om te kunnen werken. Dit nadeel zal daaarom geen invloed hebben om het CRM.
 
 De nadelen van Blazor Server zij als volgt;
 * Omdat alle C# code op de server draait, is Blazor Server over het algemeen zwaarder om te draaien dan andere webframeworks, zoals ASP.NET. Dit betekent dat er in sommige gevallen een krachtigere server nodig is om het systeem te kunnen draaien.
+  * Het CRM wordt maar door een redelijk kleine groep personen gebruikt. De impact op de systeemprestaties zal daarom waarschijnlijk minimaal zijn.
 * Blazor Server applicaties hebben altijd een verbinding nodig met de backend. Mocht deze verbinding worden verbroken, dan zal de gehele applicatie niet meer werken. Blazor WASM heeft dit probleem niet, omdat in dat geval de gehele applicatie naar de browser wordt verstuurd.
-* Vrijwel alle acties die gebruikers binnen uitvoeren moet via de SignalR verbinding naar de server worden verzonden, wat voor extra netwerkactiviteit zorgt. Ook betekent dit dat indien uw netwerk niet snel genoeg is of overbelast raakt, de applicatie zeer traag zal werken.
+  * In het geval dat de internetverbinding van Ranshuijsen uitvalt, zal vrijwel elke medewerker niet meer kunnen werken, zelfs al is het CRM nog bruikbaar. Dit nadeel is daarom niet relevant.
+* Vrijwel alle acties die gebruikers binnen uitvoeren moet via de SignalR verbinding naar de server worden verzonden, wat voor extra netwerkactiviteit zorgt. Ook betekent dit dat indien uw netwerk niet snel genoeg is of overbelast raakt, de applicatie zeer traag zal werken.  
+  * De internetverbinding van Ranshuijsen is zodanig snel dat wij hier nauwelijks iets van zullen merken.
 
 ## Mijn Advies
 Naar mijn mening maakt Blazor het zo eenvoudig om websites te bouwen, dat ik het zelfs zou aanranden aan ontwikkelaars die weinig interesse hebben in frontend development. Blazor is zeer makkelijk op te pakken, waardor het mogelijk is om binnen enkele minuten een simpele interactieve website in elkaar te zetten. Zelfs voor C# ontwikkelaars die weinig ervaring hebben met het bouwen van websites zal het eenvoudig zijn om Blazor te gebruiken.
 
+Ook het CRM zal veel profijt hebben van Blazor. Veel van de problemen van het CRM die in de loop der jaren zijn verschenen kunnen in 1 keer worden opgelost. Zo kunnen er bijvoorbeeld veel consistentieproblemen in de frontend worden opgelost, zodat bijvoorbeeld alle invoervelden voor datums hetzelfde functioneren.
