--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -1,4 +1,7 @@
 ﻿# Leerdoel 1 - SVN
+*Manage & Control - Ik wil na afloop van mijn stage in staat zijn om SVN te gebruiken als version control systeem, als alternatief voor Git.*
+
+## Inleiding
 Toen ik begon met mijn stage, kwam ik er al snel achter dat Ranshuijsen gebruik maakte van Subversion (SVN). SVN is een versiebeheersysteem (zoals bijvoorbeeld Git), waarmee broncode van software projecten kan worden beheerd. Omdat ik nog nooit met SVN had gewerkt, was ik benieuwd wat de voor- en nadelen van dit systeem zijn, en hoe het precies werkt. Net zoals alle andere medewerkers van Ranshuijsen ben ik daarom tijdens mijn stage gebruik gaan maken van SVN.
 
 ## Voor- en Nadelen
@@ -14,13 +17,13 @@ SVN is daarom niet per se beter of slechter dan Git, maar is simpelweg gewoon an
 ## Bewijsmateriaal
 De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gemaakt van SVN.  
   
-![](\\Assets\\Images\\SVN_commit_log.png)  
+![](/Assets/Images/SVN_commit_log.png)  
 ^De _commit log_ van de SVN branch waar ik in werkte. Genomen 27-10-2010^
 
-![](\\Assets\\Images\\SVN_merge.png)  
+![](/Assets/Images/SVN_merge.png)  
 ^Een screenshot van _TortoiseMerge_, een tool om _Merge conflicten_ op te lossen. Genomen 13-11-2020^
 
-![](\\Assets\\Images\\SVN_new_commit.png)
+![](/Assets/Images/SVN_new_commit.png)
 ^Een screenshot van een nieewe SVN commit. Genomen 9-12-2020^
 
 ## Feedback bedrijfsbegeleider
