--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -1,15 +1,15 @@
 ﻿# Leerdoel 2 - Deployment
+*Analyseren - Ik wil na afloop van mijn stage hebben geleerd hoe het bedrijf de deployment van nieuwe systemen regelt.*
 
+## Inleiding
 Tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten kwam ik regelmatig informatie tegen over het uitrollen van (nieuwe en bestaande) systemen. Zo kwam ik bijvoorbeeld de termen _Continuous Deployment_ en _Continuous Integration_ (CI/CD) tegen, wat refereert naar systemen die volledig automatisch andere systemen kunnen klaarmaken voor gebruik. Omdat ik meer wilde weten over hoe systemen worden uitgerolt binnen een organisatie, heb ik besloten om hier een leerdoel van te maken. Dit ook omdat ik verwacht later tijdens mijn werk regelmatig dit soort processen te moeten doorlopen.
 
 ## Werkwijze
-
 Mijn bedrijfsbegeleider en een andere medewerker van Ranshuijsen hebben mij uitgelegd hoe het deployment proces van Ranshuijsen in elkaar zit. De tools en scripts die in dit proces worden gebruikt heb ik zelf hierna extra onderzocht door de documentatie hiervan door te nemen. Het gehele deploymentproces heb ik vervolgens samengevat in een kort verslag, dat hieronder te vinden is als Bewijsmateriaal 1.
 
 Tot slot ben ik bezig geweest met onderzoeken of ik een _CI/CD pipeline_ of ander deployment process kon opzetten voor deze website. Al vrij snel kwam ik [GitHub Actions](https://github.com/features/actions) tegen; een onderdeel van GitHub waarmee ontwikkelaars gemakkelijk een _CI/CD pipeline_ konden opzetten om zo hun applicaties automatisch te _builden_, testen, en uit te rollen. Op basis van dit de [GitHub Actions documentatie](https://docs.github.com/en/free-pro-team@latest/actions), en [informatie van het internet](https://swimburger.net/blog/dotnet/how-to-deploy-aspnet-blazor-webassembly-to-github-pages) is het mij gelukt om een nieuwe pipeline op te zetten voor deze website. Een beschrijving van deze pipeline is hieronder te vinden als Bewijsmateriaal 2.
 
 ## Bewijsmateriaal 1 - Deploymentproces van Ranshuijsen
-
 Het deploymentproces van Ranshuijsen werkt ongeveer als volgt.
 
 1. Een medewerker voert een aantal [NAnt](http://nant.sourceforge.net/) scripts uit, waaronder 1 applicatiespecifiek script en verschillende basis scripts. Deze scripts automatiseren verschillende acties, zoals het configureren van de applicatie (waar nodig), het versienummer verhogen, controleren of alle bestanden zijn geupload naar de SVN repository, enzovoort. Uiteindelijk zal het script het systeem compileren door via [MSBuild](https://docs.microsoft.com/en-us/visualstudio/msbuild/msbuild?view=vs-2019) een Release build te maken.
@@ -20,7 +20,6 @@ Het deploymentproces van Ranshuijsen werkt ongeveer als volgt.
 De _RvlBuildToolkit_ draait direct op de servers, en kan daarom alleen worden gebruikt door eerst via _Remote Desktop_ te verbinden met de server. Mocht er namelijk iets verkeerd gaan tijdens het installeren van een nieuwe versie, dan kan een ontwikkelaar dit direct oplossen.
 
 ## Bewijsmateriaal 2 - GitHub Actions
-
 Met de kennis die ik tijdens mijn stage heb verzameld, is het mij gelukt om een _CI/CD pipeline_ voor deze website op te zetten met behulp van [GitHub Actions](https://github.com/features/actions).
 
 Elke keer als ik een deel van de text of code van mijn portfolio aanpas, dan wordt er automatisch [een update script](https://github.com/TehNolz/Portfolio/blob/master/.github/workflows/update.yml) uitgevoerd die mijn website update naar de laatste versie. Het script werkt als volgt;
@@ -40,7 +39,6 @@ Door dit script te schrijven heb ik een goed beeld gekregen van hoe een _CI/CD p
 
 ## Feedback bedrijfsbegeleider
 *Het is goed om te zien dat je het deployment proces bij Ranshuijsen goed hebt leren kennen en begrijpt waarom wij dingen doen zoals we ze doen. Jouw leergierigheid om nieuwe technieken te onderzoeken en in de praktijk te brengen maakt dat je snel dit soort kennis tot je neemt.*
-
 
 ## Reflectie  
 Dankzij het onderzoek dat ik heb gedaan als onderdeel van dit leerdoel, heb ik meer geleerd over hoe (updates voor) systemen kunnen worden uitgerold en klaargemaakt voor gebruik. Ik ben er zeker van dat deze kennis later tijdens mijn werk erg handig zal zijn, omdat elk softwarebedrijf hier wel mee te maken krijgt. Ook zal de kennis handig zijn voor mijn eigen projecten. Ik ben zelfs al bezig geweest om een _GitHub Actions_ script op te zetten voor een hobbyproject waar ik op het moment mee bezig ben, zodat ik nieuwe versies hiervan automatisch kan testen en uitrollen naar een server. Om deze redenen vind ik dan ook dat ik dit leerdoel heb behaald.
