--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
@@ -1,4 +1,8 @@
 ﻿# Leerdoel 4 - Advies
+*Adviseren - Ik wil na afloop van mijn stage in staat zijn om een advies te geven over de bruikbaarheid van een nieuwe technologie.*
+
+## Inleiding
+
 Als ik een technologie goed wil beheersen, dan moet ik ook kunnen achterhalen wat de voor- en nadelen van deze technologie zijn. Deze informatie zou ik vervolgens kunnen gebruiken om een advies te geven over de bruikbaarheid van een technologie. Tijdens mijn stage wilde ik leren hoe ik de voor- en nadelen van een technologie het besten kan onderzoeken en vervolgens te presenteren. Ik heb daarom besloten hier een leerdoel van te maken.
 
 ## Werkwijze
