--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -1,10 +1,13 @@
 ﻿# Leerdoel 5 - Testen
-Het testen van software is zeer belangrijk. Als een bedrijf software oplevert waar veel en/of grote fouten in zitten, dan kan dit veel tijd en geld kosten. Om deze redenen wilde ik tijdens mijn stage leren hoe een bedrijf zoals Ranshuijsen hun software test, zodat ik deze zelfde methodes ook op mijn eigen projecten kan toepassen.
+*Ontwerpen - Ik wil na afloop van mijn stage hoe ik mijn code op een goede manier kan testen volgens een professionele teststrategie.*
+
+## Inleiding  
+Het testen van software is zeer belangrijk. Als een bedrijf software oplevert waar veel en/of grote fouten in zitten, dan kan dit veel tijd en geld kosten. Om deze redenen wilde ik tijdens mijn stage leren hoe een bedrijf zoals Ranshuijsen hun software test, zodat ik zelf ook een goede teststrategie voor mijn eigen projecten kan ontwerpen.
 
 # Werkwijze
 In overleg met mijn bedrijfsbegeleider had ik besloten om een testplan op te zetten voor het CRM, waar ik als onderdeel van mijn [stageopdracht](Content/Stage3/Stageopdracht) aan werk. Hiervoor heb ik aan twee medewerkers gevraagd of zij een aantal testplannen hadden die ik als voorbeeld zou kunnen gebruiken. Op basis van de documenten die zij mij hebben gegeven en de documenten die ik ook tijdens mijn 1ste en 2de jaars projecten heb gebruijkt, heb ik een testplan opgezet over het user management gedeelte van het CRM. Dit testplan bevat enkele tests die uitgevoerd kunnen worden om te controleren of dit deel van het CRM werkt naar behoren.
 
-Helaas bleek Ranshuijsen weinig gebruik te maken van _Unit Tests_, waardoor ik deze niet heb kunnen bestuderen. Wel kwam ik tijdens het werken aan [Leerdoel 7 - Design Patterns](Content/Stage3/Leerdoelen/7) veel informatie tegen over het gebruik van Dependency Injection bij het schrijven van _Unit Tests_, waardoor ik hier alsnog iets over heb geleerd.
+Helaas bleek Ranshuijsen weinig gebruik te maken van _Unit Tests_, waardoor ik deze niet heb kunnen bestuderen. Wel kwam ik tijdens het werken aan [Leerdoel 7 - Design Patterns](Content/Stage3/Leerdoelen/7) veel informatie tegen over het gebruik van Dependency Injection bij het schrijven van _Unit Tests_, waardoor ik hier toch nog iets over heb kunnen leren tijdens mijn stage.
 
 # Bewijsmateriaal
 Voor dit leerdoel heb ik een testplan opgezet waarin het user management gedeelte van het CRM wordt getest. Omdat er echter gevoelige informatie in dit document staan, kan ik het niet op deze website plaatsen.
@@ -13,7 +16,8 @@ Voor dit leerdoel heb ik een testplan opgezet waarin het user management gedeelt
 *Zoals vaker bij Ranshuijsen zijn testplannen niet heel uitgebreid met een focus op directe testscenario's. Er zijn echter ook software development organisaties waar het testplan veel meer bevat dan sec de te testen scenario's, maar waarbij bijv ook kwaliteitscriteria en de uitrol van de testen zelf onderdeel is van dat plan. Daar kan je bij een vervolg opdracht mogelijk nog van leren.*
 
 ## Reflectie
-Uiteindelijk heb ik helaas niet zo veel over dit onderwerp geleerd als ik had gehoopt. Tijdens mijn opleiding heb ik al enkele testplannen moeten schrijven, en de testplannen van Ranshuijsen verschillen hier weinig mee. Ook heb ik weinig geleerd over het schrijven van _Unit Tests_, omdat Ranshuijsen hier zelf weinig gebruik van maakt. Ik had gehoopt dat zij een aantal technieken gebruikte waar ik nog nooit van had gehoord, maar uiteindelijk bleek dit niet het geval te zijn. Zoals mijn bedrijfsbegeleider hierboven ook heeft genoemd, kan ik hier waarschijnlijk later bij een andere opdracht wel meer over leren.
+Uiteindelijk heb ik helaas niet zo veel over dit onderwerp geleerd als ik had gehoopt. Tijdens mijn opleiding heb ik al enkele testplannen moeten schrijven, en de testplannen van Ranshuijsen verschillen hier weinig mee. Ook heb ik weinig geleerd over het schrijven van _Unit Tests_, omdat Ranshuijsen hier zelf weinig gebruik van maakt. Ik had gehoopt dat zij een aantal technieken gebruikte waar ik nog nooit van had gehoord, maar uiteindelijk bleek dit niet het geval te zijn.
 
-Omdat ik weinig over dit onderwerp heb geleerd, vindt ik persoonlijk dat ik dit leerdoel niet behaald heb.
+Desondaks heb ik dankzij [Leerdoel 7](Content/Stage3/Leerdoelen/7) alsnog iets over het schrijven van _Unit Tests_ kunnen leren. Ik kwam er hierbij namelijk achter dat Dependency Injection enorm handig is bij het testen van applicaties die afhankelijk zijn van externe systemen. Door de componenten die met deze systemen communiceren te injecteren in plaats van direct aan de applicatie te koppelen, is het mogelijk om een zelfgemaakte imitatie te bouwen waarmee het systeem gemakkelijk kan worden getest. Deze methode zal zeker handig zijn als ik later projecten moet gaan testen.
 
+Het liefst had ik meer vanuit Ranshuijsen geleerd over het testen van applicaties. Toch vind ik dat ik genoeg kennis tijdens mijn stage heb opgedaan om dit leerdoel als behaald te beschouwen.
