--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -1,35 +1,19 @@
-﻿# Leerdoel 6 - Ideeën uitwerken
+﻿# Leerdoel 6 - Wijzigingen ontwerpen
+*Ontwerpen - Ik wil na afloop van mijn stage in staat zijn om grote wijzigingen aan een systeem te ontwerpen en te plannen.*
 
-In mijn vrije tijd doe ik vrijwillergerswerk als moderator van de Minecraft community op Reddit. Mijn taken hierbij bestaan onder andere uit het handhaven van de community-regels en het verwijderen van overtredende posts. Enkele maanden voor mijn stage besefte ik dat een groot deel van dit werk zou kunnen automatiseren doormiddel van een Reddit bot. Het zou bijvoorbeeld niet moeilijk moeten zijn om te controleren of een gebruiker te vaak dingen upload. Een dergelijke bot zou de werkdruk van de moderators flink kunnen verlagen, en zou ervoor zorgen dat wij sneller en op een consistentere manier kunnen reageren op meldingen van gebruikers.
-
-Toen ik echter begon aan dit project, kwam ik er al snel achter dat een dergelijke bot veel complexer zou zijn dan ik had verwacht. Ik moest regelmatig mijn werk stilleggen omdat ik iets over het hoofd had gezien, waar ik vervolgens weer een tijd lang over moest nadenken. Ook zat ik hierdoor vaak stukken code te herschrijven, zonder veel vooruitgang te maken. Ik verloor daarom ook al vrij snel mijn motivatie, en legde het project neer.
-
-Ik wilde daarom tijdens mijn stage leren hoe bedrijven zoals Ranshuijsen grote, complexe systemen ontwerpen en plannen, zodat ik deze methodes zelf ook kan gebruiken en alsnog aan dit project te kunnen beginnen. Daarom heb ik besloten hier een leerdoel van te maken.
+## Inleiding
+Als onderdeel van mijn stage ben ik bezig geweest met het migreren van het CRM systeem van Ranshuijsen naar Blazor. Omdat ik nog nooit een applicatie heb gemigreerd naar een andere technologie, wilde ik graag meer over weten over hoe dit precies gaat. Ik vroeg mij vooral af hoe dit soort wijzigingen worden ontworpen en gepland, omdat er vaak veel uitdagingen en andere problemen hierbij verschijnen die allemaal moeten worden opgelost. Ook zou het goed kunnen dat ik in de toekomst tijdens mijn werk een soortgelijke opdracht krijg, waarbij deze kennis erg handig zou zijn. Daarom heb ik besloten hier een leerdoel van te maken.
 
 ## Werkwijze
-In het begin ging ik ervan uit dat bedrijven hun nieuwe projecten starten door een Technisch Ontwerp document op te zetten, net zoals wij dit tijdens de opleiding ook eens hebben gedaan. Dit document zou precies beschrijven hoe een systeem in elkaar zit, en wat er nodig is om het systeem te kunnen bouwen. Ik was van plan om deze documenten te bestuderen om zo een beeld te krijgen over hoe Ranshuijsen aan een nieuw project begint.  
-  
-Toen ik echter bij mijn bedrijfsbegeleider ging navragen of zij ergens dit soort documenten, bleek het dat zij eigenlijk nooit deze documenten schreven. In plaats daarvan houden zij een meeting met alle ontwikkelaars, waarin zij uitschetsen hoe het huidige systeem (indien deze bestaat) is opgebouwd, hoe het nieuwe systeem zal worden opgebouwd, en hoe zij van het oude naar het nieuwe systeem gaan migreren. Na het afronden van deze meetings weten alle ontwikkelaars hoe het nieuwe systeem zal worden gebouwd, en wat hun taken hierbij zijn.
+Tijdens het werken aan mijn stageopdracht kwamen er twee vraagstukken naar boven. Deze waren als volgt;
 
-Mijn beddrijfsbegeleider demonstreerde hoe deze meetings er ongeveer uit zien door een schets te maken van de CRM migratie waar ik mee bezig was als onderdeel van mijn [stageopdracht](Content/Stage3/Stageopdracht). Deze schets is hieronder te vinden;
+Het eerste probleem waar we tegen aan liepen was het inlogsysteem. In het begin waren wij namelijk van plan om een geleidelijke migratie uit te voeren door onderdelen van het CRM één voor één over te zetten naar een nieuwe, aparte Blazor website. Dit betekende echter dat gebruikers twee keer moesten inloggen om het gehele systeem te kunnen gebruiken, wat niet ideaal was. Ik ben daarom ruim een week lang bezig geweest met het zoeken naar mogelijke oplossingen hiervoor. Dit heb ik gedaan door op het internet te zoeken naar artikelen en forumberichten van mensen die tegen hetzelfde of een soortgelijk probleem aan liepen, en door te onderzoeken hoe zij dit hebben aangepakt en opgelost. De resultaten van dit onderzoek heb ik verwerkt in een ontwerpdocument, die verschillende mogelijke oplossingen voorlegt.
 
-![](Assets/Images/CRM_migratie_schets.PNG)  
-  
-De linkerkant van de schets beschrijft de huidige situate (de _Ist_). Het geeft een globaal overzicht over de onderdelen waaruit de oude versie van het CRM was opgebouwd. De rechterkant beschrijft de nieuwe situatie (de _Soll_), waarin de nieuwe situatie wordt beschreven.  
-  
-Met de informatie die ik tijdens het gesprek met mijn bedrijfsbegeleider heb gekregen, is het mij gelukt om een technisch ontwerp op te zetten over mijn eerdergenoemde idee. Dit document heb ik opgezet door een soort mentale schets van het systeem te maken. Op deze manier kon ik het systeem gemakkelijk opsplitsen in kleine, gespecialiseerde stukjes, en werd het ineens een stuk makkelijker om dit alles op papier te zetten.
+Ook hadden wij besloten om de oude TableGateways ORM te vervangen met Microsoft's EntityFramework. De gehele _Data Access Layer_ (DAL) moest hiervoor worden omgebouwd, wat veel uitdagingen met zich mee bracht. Ik ben ruim een week bezig geweest met uitzoeken welke problemen we tegen aan zouden kunnen lopen, wat de mogelijke oplossingen voor deze problemen zijn, en welke andere beslissingen er gemaakt moesten worden. Ook deze informatie heb ik verwerkt in een onderzoeksdocument.
 
 ## Bewijsmateriaal
-Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik beschrijf wat mijn eerder genoemde idee precies inhoudt, wat voor een functionaliteit het systeem zal bevatten, en hoe het systeem is gestructureerd. Dit document zal ik later kunnen gebruiken om alsnog dit systeem te bouwen.
-
-Het document is [hier](Content/Stage3/Bewijsmateriaal/6) te vinden.
+Als bewijsmateriaal voor dit leerdoel heb ik twee ontwerpdocumenten geschreven. In deze documenten staat informatie die de bovenstaande vraagstukken beantwoorden, door verschillende oplossingen voor problemen voor te leggen en door alle beslissingen die gemaakt moesten worden op een rij te zetten. Omdat deze documenten gevoelige informatie bevatten, is het voor mij helaas niet mogelijk om deze op mijn website te plaatsen.
 
 ## Feedback bedrijfsbegeleider
-*Ik heb hier niet echt feedback op omdat het lastig is te toetsen in hoeverre dit aansluit bij ons.*
 
 ## Reflectie
-Met de kennis die ik tijdens mijn stage heb opgedaan, is het mij gelukt om een ontwerpdocument te schrijven voor mijn eerder genoemde idee. Hierdoor heb ik een goed beeld gekregen over wat ik wil dat het systeem zal gaan doen, en ik weet nu globaal hoe dit systeem ook daadwerkelijk in elkaar zal gaan zitten. Dit is precies wat ik hoopte, en daarom vind ik dat ik dit leerdoel behaald heb.
-
-Ik verwacht dat als ik eenmaal met dit project ga beginnen, ik nog enkele verbeterpunten in het document tegen kom. Waarschijnlijk zijn er bepaalde onderdelen die ik alsnog over het hoofd heb gezien, die ik dan achteraf nog in het document moet verwerken. Met de kennis die ik nu heb denk ik echter dat dit geen probleem zal zijn.
-
-Ook verwacht ik dat ik later tijdens mijn werk zo nu en dan hetzelfde soort ontwerpdocument zal moeten schrijven. De kennis die ik tijdens mijn stage heb opgedaan zal hierbij erg handig zijn.
