--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -1,31 +1,20 @@
 ﻿# Leerdoel 7 - Design Patterns
+*Realiseren - Ik wil na afloop van mijn stage in staat zijn om software te ontwikkelen met behulp van design patterns (behalve MVC)*
 
+## Inleiding
 Ik heb tijdens het zoeken naar informatie voor mijn 1ste- en 2dejaars projecten meerdere malen de term Design Patterns voorbij zien komen, zonder echt te weten wat dit precies inhield. Bij het vak Web Development werd het al een stukje duidelijker, omdat wij hierbij over MVC hadden geleerd, een design pattern dat voornamelijk wordt gebruikt voor webapplicaties. Ik wist echter dat er meer van deze design patterns waren, en wilde hier meer over leren.
 
 Het bleek dat de twee technologieën die ik voor mijn stageopdracht moest gebruiken (ASP.NET Core en Blazor) beide gebruik maakte van Dependency Injection. Tijdens het werken aan mijn stageopdracht ben ik daarom ook al vrij snel hiermee in aanraking gekomen. Na informatie over Dependency Injection in ASP.NET Core op het Internet op te zoeken en een voorbeeld van een medewerker te analyseren, is het mij gelukt om mijn eigen service te bouwen. Deze service kan in verschillende onderdelen van het CRM worden geïnjecteerd om zo informatie over de ingelogde gebruiker op te kunnen halen.
 
-## Design Patterns
-Om het kort uit te leggen; een Design Pattern is een generieke en daarom herbruikbare manier om een bepaald project te bouwen. Het is een soort sjabloon die ontwikkelaars kunnen gebruiken bij het ontwerpen van hun systeem, ongeacht van wat voor een systeem dit precies is.
+## Werkwijze
+Ik heb tijdens mijn stage over Dependency Injection geleerd door het simpelweg zelf te gebruiken. Ik heb met behulp van informatie die ik gevonden had op het internet (van bijvoorbeeld [Microsoft's website](https://docs.microsoft.com/en-us/aspnet/core/fundamentals/dependency-injection?view=aspnetcore-5.0)) zelf een aantal services kunnen maken, die ik vervolgens via Dependency Injection heb kunnen injecteren. Door zelf gebruik te maken van Dependency Injection heb ik een goed beeld kunnen opbouwen van wat het precies is en hoe het werkt.
 
-Neem bijvoorbeeld de Model, View, Controller (MVC) design pattern. Deze design pattern wordt voornamelijk gebruikt voor het bouwen van websites, maar kan ook voor andere applicaties worden gebruikt. Software die MVC gebruiken zijn vrijwel altijd opgebouwd uit 3 verschillende lagen;
-
-* De Model laag, die aangeeft hoe de data die het programma gebruikt is gestructureerd,
-* De View laag, die de verschillende interfaces en menus bevat die de gebruiker zal zien en gebruiken,
-* De Controller laag, die de communicatie tussen de andere twee lagen faciliteerd en de _business logic_ van het systeem bevat.
-
-## Dependency Injection
-_Dependency Injection_ is ook een dergelijke design pattern. Applicaties die deze design pattern gebruiken zijn niet direct aan hun dependencies verbonden. In plaats daarvan worden ze "geinjecteerd"; er wordt een object van de dependency gemaakt, die vervolgens als _service_ beschikbaar wordt gemaakt voor de verschillende onderdelen van het systeems. Dit zorgt ervoor dat deze dependencies gemakkelijk kunnen worden nagemaakt en vervangen, zodat het makkelijker wordt om de applicatie te testen.
-
-Stel dat u een applicatie heeft ontwikkeld die data met een datum en tijdstip ontvangt van een externe dienst en op basis van deze data acties onderneemt. Het blijkt dat uw applicatie niet goed om kan gaan met schrikkeljaren, waardoor er steeds fouten optreden als er data met een datum van 29 Februari wordt ontvangen. U heeft echter geen controle over de externe dienst die de data verstuurd, waardoor het probleem moeilijk te reproduceren is.
-
-Dit kan worden opgelost doormiddel van Dependency Injection. In plaats van dat de verbinding met de externe dienst direct aan uw applicatie is gekoppeld, wordt deze als object geinjecteerd. Dit object kan gemakkelijk door u worden vervangen met een namaak object, die altijd data genereert met een datum van 29 Februari. Dit namaak object geeft u de mogelijkheid om de fout ten allen tijden te reproduceren, waardoor het veel makkelijker wordt om de fout op te lossen.
+Om het kort uit te leggen; een Design Pattern is een generieke en daarom herbruikbare manier om een bepaald project te bouwen. Het is een soort sjabloon die ontwikkelaars kunnen gebruiken bij het ontwerpen van hun systeem, ongeacht van wat voor een systeem dit precies is. _Dependency Injection_ is een design pattern waarbij dependencies van een applicatie niet direct aan de applicatie worden verbonden, maar in plaats daarvan geinjecteerd worden. Er wordt een object van de dependency gemaakt, die vervolgens als _service_ beschikbaar wordt gemaakt voor de verschillende onderdelen van het systeems. Dit zorgt ervoor dat deze dependencies gemakkelijk kunnen worden nagemaakt en vervangen, zodat het makkelijker wordt om de applicatie te testen of aan te passen.
 
 ## Bewijsmateriaal
-
-Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige ingelogde gebruiker ophalen. Ook heb ik de functionaliteit van een aantal paginas van het systeem omgezet naar Blazor, om zo nog meer met Blazor te kunnen experimenteren.  
+Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunnen alle onderdelen van het vernieuwde CRM systeem van Ranshuijsen de gegevens van de huidige ingelogde gebruiker ophalen. Ik heb hierbij bestaande services van andere projecten van Ranshuijsen bestudeerd en gebruikt als voorbeeld.
   
-Zoals eerder vermeld, is deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen. Dit heb ik gedaan door een  *DocumentService* te bouwen. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie _Markdown_ bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien.
-
+Zoals eerder vermeld, is ook deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen. Dit heb ik gedaan door een  *DocumentService* te bouwen. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie _Markdown_ bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien.
 
 ## Feedback bedrijfsbegeleider
 *Je hebt aangetoond niet alleen te snappen hoe het design pattern werkt met theorie, maar ook door dit in de praktijk correct toe te passen. Let op dat design patterns zelf niet "het beste" of "goed" zijn. Het zijn gemaakte keuzes door een architectect (of developer) die richting geven aan de rest van het systeem. Ieder systeem kan zijn eigen "beste" design patterns hebben.* 
