--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -1,18 +1,13 @@
 ﻿# Leerdoel 8 - Nieuwe Technologie
+*Realiseren - Ik wil na afloop van mijn stage in staat zijn om een nieuwe technologie te onderzoeken en deze uiteindelijk te beheersen.*
+
+## Inleiding
+
 Het is belangrijk voor softwareontwikkelaars en andere ICT-medewerkers om mee te gaan met de laatste ontwikkelingen, en om regelmatig nieuwe technologieën te onderzoeken. Ik had daarom aan het begin van mijn stage besloten dat ik minimaal 1 nieuwe technologie wilde bestuderen en gebruiken.
 
 Het kwam dus ook goed uit dat ik als onderdeel van mijn stageopdracht met Blazor moest werken. Door aan mijn stageopdracht te werken, werkte ik dus ook gelijk aan dit leerdoel.
 
-## Blazor
-[Blazor](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor) is een onderdeel van het ASP.NET Core. Blazor geeft ontwikkelaars de mogelijkheid om interactieve websites te bouwen met C#, terwijl dit normaalgesproken wordt gedaan met JavaScript.
-
-Op het moment zijn er twee varianten van Blazor beschikbaar. De eerste variant is Blazor Server, waarbij alle C# code op de server wordt uitgevoerd. De browser download alleen een klein JavaScript package, en gebruikt deze om via een zogehete *SignalR* verbinding te maken met de server. Alle acties van de client (bijvoorbeeld button clicks) en alle UI updates van de server worden via deze verbinding verzonden. Deze variant vereist een server om alle code op uit te voeren, en werkt daardoor niet met statische webservers zoals [GitHub Pages](https://pages.github.com/).
-
-De tweede variant is Blazor WebAssembly (afgekort Blazor WASM). Deze variant stuurt de gehele Blazor applicatie, alle dependencies, en een kleine versie van de .NET Runtime naar de browser. De gehele applicatie wordt dan uitgevoerd binnen de browser, net zoals de meeste websites dit doen. In tegenstelling tot Blazor Server kan Blazor WebAssembly wel worden gebruikt samen met statische webservers, omdat er geen aparte server nodig is. Als de browser alle benodigde bestanden kan downloaden, dan is dat voldoende.
-
-Microsoft is bezig met het ontwikkelen van drie andere Blazor varianten, die elk weer in andere scenarios handig kunnen zijn. Op het moment is er weinig informatie over deze varianten beschikbaar.
-
-De voor- en nadelen van deze technologie zijn te lezen in het [Adviesrapport](Content/Stage3/Bewijsmateriaal/4) dat ik heb geschreven als bewijsmateriaal voor [Leerdoel 4](Content/Stage3/Leerdoelen/4). Voor meer informatie over de verschillende varianten van Blazor, zie de [ASP.NET Core Blazor hosting models](https://docs.microsoft.com/en-us/aspnet/core/blazor/hosting-models?view=aspnetcore-3.1) pagina op de officiele Microsoft website.
+Blazor is een onderdeel van Microsoft's ASP.NET Core. Het geeft ontwikkelaars de mogelijkheid om interactieve websites te bouwen met C#, terwijl dit normaalgesproken wordt gedaan met JavaScript. Voor meer informatie over Blazor, zie [de officiele website](https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor). Zie ook [Leerdoel 4](Content/Stage3/Leerdoelen/4), waarbij ik een [adviesrapport](Content/Stage3/Bewijsmateriaal/4) heb geschreven die de voor- en nadelen van Blazor beschrijft.
 
 ## Werkwijze  
   
