--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -1,4 +1,6 @@
 ﻿# Leerdoel 9 - Regels & Procedures
+*Professional Skills - Ik wil na afloop van mijn stage bekend zijn met de regels en procedures die het bedrijf hanteert.*
+
 ## Inleiding
 Tijdens mijn stage wilde ik meer leren over de regels en procedures die een softwarebedrijf zoals Ranshuijsen hanteert. Deze pagina beschrijft de verschillende regels en procedures die mij tijdens mijn stage zijn opgevallen.
 
@@ -7,7 +9,7 @@ Als Ranshuijsen een nieuwe medewerker of stagair aanneemt, dan dienen zij altijd
 
 De onderstaande screenshot laat zien dat ik alle modules en toetsen die bij deze cursus horen succesvol heb afgerond.
 
-![](\\Assets\\Images\\Cursus.png)  
+![](/Assets/Images/Cursus.png)  
  
 De cursus is opgebouwd uit verschillende teksten en videos met informatie. Na het doorlezen van sommige modules volgt er een korte toets met een aantal meerkeuzevragen over het materiaal van die module. Ik heb deze toetsen allemaal met een 10 afgerond.
 
@@ -28,6 +30,9 @@ Het is bijvoorbeeld voor medewerkers niet toegestaan om data op te slaan op pers
 Ranshuijsen maakt gebruik van _Kaizen Cockpit_. Dit is een soort to-do systeem voor organisaties waarin zij kunnen bijhouden welke taken nog moeten worden afgerondt en wat de status hiervan is. Zo heeft Ranshuijsen tickets in dit systeem gemaakt over bijvoorbeeld welke functionaliteit nog aan een systeem moet worden toegevoegd, of welke fouten er nog moeten worden opgelost.  
   
 De _Kaizen Cockpit_ van Ranshuijsen staat verbonden met het urenregistratie deel van het CRM systeem. Via deze koppeling kunnen medewerkers vanuit de _Kaizen Cockpit_ aangeven aan welke taken zij op dat moment werken, zodat het CRM kan bijhouden hoe lang zij hiermee zijn beziggeweest.
+
+## Microsoft Teams
+Helaas heb ik door de COVID-19 pandemie het meerendeel van mijn stage thuis gewerkt, waardoor ik niet veel tijd in het kantoor van Ranshuijsen heb doorgebracht. Gelukkig heb ik via Microsoft Teams regelmatig contact gehad met mijn bedrijfsbegeleider, en soms ook met andere medewerkers van Ranshuijsen. Ik heb hierdoor gewoon aan mijn stageopdracht kunnen werken.
 
 ## Feedback bedrijfsbegeleider
 *Ik heb hier niet echt feedback op anders dan dat je dat keurig gedaan hebt*
