--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
@@ -1,4 +1,8 @@
 ﻿# Leerdoel 10 - Design
+*Professional Skills - Ik wil na afloop van mijn stage hebben geleerd hoe ik de opmaak van mijn documenten kan verbeteren, zodat deze beter opvallen.*
+
+## Inleiding  
+
 Aan het begin van mijn stage heb ik mijn bedrijfsbegeleider om hulp gevraagd bij het bedenken van leerdoelen. Het viel hem op dat ik weinig aandacht besteedde aan de opmaak en uiterlijk van de documenten die ik schreef, waardoor ze waarschijnlijk niet zouden opvallen tussen de documenten van anderen. Ik heb daarom besloten dat ik meer wilde leren over hoe ik het uiterlijk van mijn documenten en programmas kan verbeteren, en heb hier een leerdoel van gemaakt.
 
 ## Werkwijze
