--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
@@ -1,4 +1,7 @@
 ﻿# Leerdoel 3 - Projecten Analyseren
+*Analyseren - Ik wil na afloop van mijn stage in staat zijn om te onderzoeken hoe een (groot) bestaand systeem is opgebouwd.*
+
+## Inleiding
 
 Het is altijd erg lastig om als nieuw lid van een ontwikkelingsteam mee te werken aan een bestaand systeem, vooral als je weinig ervaring hebt met de gebruikte technologieën. Je hebt geen idee hoe het systeem is opgebouwd, en bent daarom vaak lang bezig met het onderzoeken van de structuur voordat je echt kan gaan beginnen met werken. Om hier beter in te worden, heb ik besloten om hier een leerdoel van te maken.
 
