--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -17,13 +17,13 @@ SVN is daarom niet per se beter of slechter dan Git, maar is simpelweg gewoon an
 ## Bewijsmateriaal
 De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gemaakt van SVN.  
   
-![](Portfolio/Assets/Images/SVN_commit_log.png)  
+![](Assets/Images/SVN_commit_log.png)  
 ^De _commit log_ van de SVN branch waar ik in werkte. Genomen 27-10-2010^
 
-![](Portfolio/Assets/Images/SVN_merge.png)  
+![](Assets/Images/SVN_merge.png)  
 ^Een screenshot van _TortoiseMerge_, een tool om _Merge conflicten_ op te lossen. Genomen 13-11-2020^
 
-![](Portfolio/Assets/Images/SVN_new_commit.png)
+![](Assets/Images/SVN_new_commit.png)
 ^Een screenshot van een nieewe SVN commit. Genomen 9-12-2020^
 
 ## Feedback bedrijfsbegeleider
